# FAST-Calib_ROS2

./: CMakeLists.txt  package.xml
config/: qr_params.yaml
include/: common_lib.h
launch/: calib.launch.py  multi_calib.launch.py
src/: data_preprocess.hpp  lidar_detect.hpp  main.cpp  multi_scene.cpp  qr_detect.hpp
